# pgsense-rs

./: .dockerignore  .editorconfig  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md  TO-DOS.md  build.rs  cliff.toml  clippy.toml  deny.toml  flake.nix  rustfmt.toml  typos.toml
.docker/: bench.toml  docker-compose.yaml  init.sql
.docker/grafana/dashboards/: pgsense-loadtest.json
.docker/grafana/provisioning/dashboards/: provider.yml
.docker/pgbench/: clean.sql  sensitive.sql
.docker/postgres-exporter/: queries.yaml
.docker/postgres/docker-entrypoint-initdb.d/: 02-loadtest.sql
.docker/prometheus/: prometheus.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  checks.yml  docs.yml  prepare-release.yml  publish-release.yml
benches/: builtin_detectors_bench.rs  detection_bench.rs  validators_bench.rs
charts/pgsense/: Chart.yaml  values.yaml
charts/pgsense/dashboards/: pgsense.json
charts/pgsense/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
config/: app.toml  bench.toml  config.toml  rules.toml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  troubleshooting.md
docs/src/alerts/: deduplication.md  index.md  jsonl.md  log.md  postgres.md  slack.md  stdout.md  webhook.md
docs/src/cli/: rules.md  scan.md  validate.md
docs/src/configuration/: databases.md  index.md  logging.md  pipeline.md  profiling.md  scan-filter.md  server.md  store.md  telemetry.md
docs/src/getting-started/: installation.md  postgres-setup.md  quick-start.md
docs/src/ops/: health.md  helm.md  metrics.md  multi-database.md
docs/src/rules/: builtin.md  hot-reload.md  index.md  masking.md  regex.md  scope.md  scripts.md  validators.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/credit_cards/: embedded_no_boundary  empty  invalid_luhn  multiple  valid_visa_dashes  valid_visa_spaces
fuzz/corpus/emails/: boundary_digit.txt  boundary_underscore.txt  consecutive_dots.txt  embedded.txt  leading_hyphen.txt  local_64.txt  local_65.txt  multi_at.txt  multiple.txt  no_domain.txt  punycode.txt  trailing_dot.txt  trailing_hyphen.txt  utf8_around.txt  utf8_emoji.txt  utf8_zwsp.txt  valid_dotted.txt  valid_plus.txt
fuzz/corpus/ibans/: embedded  false_positive_delivery  invalid_check_digits  multiple  no_left_boundary  no_right_boundary  normal_text  unknown_country  valid_de_compact  valid_de_dashed  valid_de_spaced  valid_gb_compact  valid_no_short  wrong_length
fuzz/corpus/phones/: double_zero  e164_china  nanp_dashes  nanp_dots  nanp_parens
fuzz/corpus/ssns/: invalid_area_000  invalid_area_666  mixed_sep  no_boundary  valid_dot  valid_space
fuzz/targets/: credit_cards.rs  emails.rs  ibans.rs  phones.rs  ssns.rs
src/: args.rs  config.rs  events.rs  lib.rs  logging.rs  main.rs  metrics.rs  pattern.rs  scanner.rs  server.rs  telemetry.rs  validation.rs  watcher.rs
src/alerts/: config.rs  dedup.rs  dispatcher.rs  jsonl.rs  log.rs  mod.rs  postgres.rs  slack.rs  stdout.rs  webhook.rs
src/commands/: mod.rs  rules.rs  scan.rs
src/commands/validate/: connect.rs  mod.rs
src/config/: mod.rs  secret.rs
src/pipeline/: config.rs  destination.rs  mod.rs  runner.rs  source_bootstrap.rs
src/pipeline/store/: mod.rs
src/pipeline/store/postgres/: mod.rs  queries.rs  types.rs
src/pipeline/store/postgres/migrations/: 20260211000000_base.sql
src/pipeline/store/sqlite/: mod.rs  queries.rs  types.rs
src/pipeline/store/sqlite/migrations/: 20260211000000_base.sql
src/pipeline/supervisor/: database_unit.rs  mod.rs
src/rules/: builtin_detectors.rs  config.rs  engine.rs  masking.rs  mod.rs  script.rs  validators.rs
src/rules/detectors/: credit_card.rs  email.rs  iban.rs  mod.rs  phone.rs  ssn.rs
tests/: database_unit_test.rs  integration_test.rs  pipeline_test.rs  postgres_alert_test.rs
tests/support/: mod.rs
