[workspace]
exclude = ["fuzz"]

[workspace.metadata.bin]
cargo-llvm-cov = "0.6"

[package]
name = "pgsense-rs"
version = "0.6.1"
edition = "2024"
rust-version = "1.88"
authors = ["Aleksei Burmistrov <mr.ehbr@gmail.com>"]
description = "A rule-based Rust service that monitors PostgreSQL logical replication streams to detect sensitive data and trigger real-time alerts."
repository = "https://github.com/MrEhbr/pgsense-rs"
homepage = "https://mrehbr.github.io/pgsense-rs/"
documentation = "https://mrehbr.github.io/pgsense-rs/"
license = "MIT"
readme = "README.md"
keywords = ["postgresql", "replication", "security", "monitoring", "pii"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "pgsense-rs"
path = "src/main.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tonic"]

[dependencies]
# Core
anyhow = "1.0"
arc-swap = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Pipeline
etl = { git = "https://github.com/supabase/etl", rev = "ce88ba7" }
etl-postgres = { git = "https://github.com/supabase/etl", rev = "ce88ba7" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }

# Detection
globset = "0.4"
rlibphonenumber = "2.2"
regex = "1"
rhai = { version = "1", features = ["sync"] }

# Config & CLI
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"], default-features = false }
config = { version = "0.15", features = ["toml"], default-features = false }
notify = "8"
rand = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
toml = "1"

# HTTP
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Observability
console-subscriber = { version = "0.5", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
tonic = { version = "0.14", optional = true }
prometheus = { version = "0.14", default-features = false, features = ["process"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[dev-dependencies]
# Testing
assert_cmd = "2.2"
predicates = "3.1"
rstest = "0.26"
tempfile = "3"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio-postgres = "0.7"
toml = "1"

# Benchmarking
criterion = "0.8"

[[bench]]
name = "detection_bench"
harness = false

[[bench]]
name = "builtin_detectors_bench"
harness = false

[[bench]]
name = "validators_bench"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[profile.dist]
inherits = "release"
lto = "thin"
