[package]
name = "pgsense-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
afl = "0.15"

[dependencies.pgsense-rs]
path = ".."

[[bin]]
name = "credit_cards"
path = "targets/credit_cards.rs"

[[bin]]
name = "ssns"
path = "targets/ssns.rs"

[[bin]]
name = "phones"
path = "targets/phones.rs"

[[bin]]
name = "emails"
path = "targets/emails.rs"

[[bin]]
name = "ibans"
path = "targets/ibans.rs"
